--- a/src/output.css
+++ b/src/output.css
@@ -861,10 +861,6 @@ video {
   padding-top: 4rem;
 }
 
-.text-left {
-  text-align: left;
-}
-
 .text-center {
   text-align: center;
 }
@@ -993,370 +989,77 @@ video {
   background-color: rgb(33 183 226 / var(--tw-bg-opacity));
 }
 
-@media not all and (min-width: 1536px) {
-  .max-2xl\:px-32 {
-    padding-left: 8rem;
-    padding-right: 8rem;
-  }
-
-  .max-2xl\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
-  .max-2xl\:px-36 {
-    padding-left: 9rem;
-    padding-right: 9rem;
-  }
-}
-
 @media not all and (min-width: 768px) {
-  .max-md\:ml-10 {
-    margin-left: 2.5rem;
-  }
-
   .max-md\:ml-0 {
     margin-left: 0px;
-  }
-
-  .max-md\:ml-20 {
-    margin-left: 5rem;
   }
 
   .max-md\:ml-2 {
     margin-left: 0.5rem;
   }
 
-  .max-md\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .max-md\:ml-5 {
-    margin-left: 1.25rem;
-  }
-
-  .max-md\:mr-6 {
-    margin-right: 1.5rem;
-  }
-
-  .max-md\:mr-96 {
-    margin-right: 24rem;
-  }
-
   .max-md\:mr-0 {
     margin-right: 0px;
-  }
-
-  .max-md\:mr-5 {
-    margin-right: 1.25rem;
-  }
-
-  .max-md\:mr-7 {
-    margin-right: 1.75rem;
-  }
-
-  .max-md\:mr-10 {
-    margin-right: 2.5rem;
-  }
-
-  .max-md\:mr-14 {
-    margin-right: 3.5rem;
-  }
-
-  .max-md\:mr-20 {
-    margin-right: 5rem;
-  }
-
-  .max-md\:mr-24 {
-    margin-right: 6rem;
-  }
-
-  .max-md\:mr-32 {
-    margin-right: 8rem;
-  }
-
-  .max-md\:mr-3 {
-    margin-right: 0.75rem;
-  }
-
-  .max-md\:mr-36 {
-    margin-right: 9rem;
   }
 
   .max-md\:mt-5 {
     margin-top: 1.25rem;
   }
 
-  .max-md\:flex {
-    display: flex;
+  .max-md\:mt-8 {
+    margin-top: 2rem;
   }
 
-  .max-md\:h-\[58rem\] {
-    height: 58rem;
-  }
-
-  .max-md\:h-auto {
-    height: auto;
-  }
-
-  .max-md\:h-60 {
-    height: 15rem;
-  }
-
-  .max-md\:h-40 {
-    height: 10rem;
-  }
-
-  .max-md\:h-56 {
-    height: 14rem;
-  }
-
-  .max-md\:h-5 {
-    height: 1.25rem;
+  .max-md\:hidden {
+    display: none;
   }
 
   .max-md\:h-10 {
     height: 2.5rem;
   }
 
-  .max-md\:h-96 {
-    height: 24rem;
-  }
-
-  .max-md\:h-\[10rem\] {
-    height: 10rem;
-  }
-
-  .max-md\:h-\[rem\] {
-    height: rem;
-  }
-
-  .max-md\:h-\[20rem\] {
-    height: 20rem;
-  }
-
-  .max-md\:w-96 {
-    width: 24rem;
-  }
-
-  .max-md\:w-1\/2 {
-    width: 50%;
-  }
-
-  .max-md\:w-\[\] {
-    width: ;
-  }
-
-  .max-md\:w-\[24rem\] {
-    width: 24rem;
-  }
-
-  .max-md\:w-\[24re\] {
-    width: 24re;
-  }
-
-  .max-md\:w-\[58rem\] {
-    width: 58rem;
-  }
-
-  .max-md\:w-\[25rem\] {
-    width: 25rem;
-  }
-
-  .max-md\:w-\[255rem\] {
-    width: 255rem;
-  }
-
-  .max-md\:w-\[60rem\] {
-    width: 60rem;
-  }
-
-  .max-md\:w-\[rem\] {
-    width: rem;
-  }
-
-  .max-md\:w-10 {
-    width: 2.5rem;
-  }
-
-  .max-md\:w-1 {
-    width: 0.25rem;
-  }
-
-  .max-md\:w-\[6rem\] {
-    width: 6rem;
-  }
-
-  .max-md\:w-\[70rem\] {
-    width: 70rem;
-  }
-
-  .max-md\:w-\[62rem\] {
-    width: 62rem;
-  }
-
-  .max-md\:w-\[52rem\] {
-    width: 52rem;
-  }
-
-  .max-md\:w-\[53rem\] {
-    width: 53rem;
-  }
-
-  .max-md\:w-\[55rem\] {
-    width: 55rem;
-  }
-
-  .max-md\:w-\[50rem\] {
-    width: 50rem;
-  }
-
-  .max-md\:w-\[0rem\] {
-    width: 0rem;
-  }
-
-  .max-md\:w-\[4rem\] {
-    width: 4rem;
-  }
-
-  .max-md\:w-\[40rem\] {
-    width: 40rem;
-  }
-
-  .max-md\:w-4 {
-    width: 1rem;
-  }
-
-  .max-md\:w-2 {
-    width: 0.5rem;
-  }
-
-  .max-md\:w-20 {
-    width: 5rem;
-  }
-
-  .max-md\:w-16 {
-    width: 4rem;
-  }
-
-  .max-md\:w-\[58\] {
-    width: 58;
-  }
-
-  .max-md\:w-40 {
-    width: 10rem;
-  }
-
-  .max-md\:w-\[45rem\] {
-    width: 45rem;
-  }
-
-  .max-md\:w-60 {
-    width: 15rem;
-  }
-
-  .max-md\:w-\[48rem\] {
-    width: 48rem;
-  }
-
-  .max-md\:w-\[46rem\] {
-    width: 46rem;
+  .max-md\:h-56 {
+    height: 14rem;
   }
 
   .max-md\:w-32 {
     width: 8rem;
   }
 
-  .max-md\:w-\[72rem\] {
-    width: 72rem;
+  .max-md\:w-40 {
+    width: 10rem;
   }
 
-  .max-md\:w-\[58\.8rem\] {
-    width: 58.8rem;
-  }
-
-  .max-md\:w-\[95rem\] {
-    width: 95rem;
-  }
-
-  .max-md\:w-\[20rem\] {
-    width: 20rem;
-  }
-
-  .max-md\:w-\[57\.8rem\] {
-    width: 57.8rem;
+  .max-md\:w-96 {
+    width: 24rem;
   }
 
   .max-md\:w-\[44rem\] {
     width: 44rem;
   }
 
-  .max-md\:w-\[42rem\] {
-    width: 42rem;
+  .max-md\:w-\[45rem\] {
+    width: 45rem;
   }
 
-  .max-md\:w-\[56rem\] {
-    width: 56rem;
+  .max-md\:w-\[58rem\] {
+    width: 58rem;
   }
 
-  .max-md\:w-\[58\.2rem\] {
-    width: 58.2rem;
-  }
-
-  .max-md\:w-9 {
-    width: 2.25rem;
-  }
-
-  .max-md\:w-3 {
-    width: 0.75rem;
-  }
-
-  .max-md\:w-\[10rem\] {
-    width: 10rem;
-  }
-
-  .max-md\:max-w-screen-md {
-    max-width: 768px;
+  .max-md\:w-screen {
+    width: 100vw;
   }
 
   .max-md\:flex-col {
     flex-direction: column;
   }
 
-  .max-md\:items-end {
-    align-items: flex-end;
-  }
-
   .max-md\:items-center {
     align-items: center;
   }
 
-  .max-md\:justify-end {
-    justify-content: flex-end;
-  }
-
   .max-md\:justify-center {
     justify-content: center;
-  }
-
-  .max-md\:gap-1 {
-    gap: 0.25rem;
-  }
-
-  .max-md\:gap-2 {
-    gap: 0.5rem;
-  }
-
-  .max-md\:gap-6 {
-    gap: 1.5rem;
-  }
-
-  .max-md\:gap-10 {
-    gap: 2.5rem;
-  }
-
-  .max-md\:gap-8 {
-    gap: 2rem;
   }
 
   .max-md\:gap-14 {
@@ -1368,34 +1071,8 @@ video {
     padding-right: 2.5rem;
   }
 
-  .max-md\:pl-5 {
-    padding-left: 1.25rem;
-  }
-
-  .max-md\:pl-8 {
-    padding-left: 2rem;
-  }
-
-  .max-md\:pl-14 {
-    padding-left: 3.5rem;
-  }
-
   .max-md\:pl-16 {
     padding-left: 4rem;
-  }
-
-  .max-md\:pl-56 {
-    padding-left: 14rem;
-  }
-
-  .max-md\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
-  .max-md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 
   .max-md\:text-3xl {
@@ -1407,23 +1084,20 @@ video {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
+
+  .max-md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
 }
 
 @media not all and (min-width: 640px) {
-  .max-sm\:w-96 {
-    width: 24rem;
+  .max-sm\:hidden {
+    display: none;
   }
 }
 
 @media (min-width: 768px) {
-  .md\:ml-5 {
-    margin-left: 1.25rem;
-  }
-
-  .md\:ml-10 {
-    margin-left: 2.5rem;
-  }
-
   .md\:flex {
     display: flex;
   }
@@ -1436,10 +1110,6 @@ video {
     width: auto;
   }
 
-  .md\:w-80 {
-    width: 20rem;
-  }
-
   .md\:border-0 {
     border-width: 0px;
   }
@@ -1447,19 +1117,14 @@ video {
   .md\:p-0 {
     padding: 0px;
   }
+}
 
-  .md\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
+@media (min-width: 1024px) {
+  .lg\:flex {
+    display: flex;
   }
 
-  .md\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
-  .md\:px-96 {
-    padding-left: 24rem;
-    padding-right: 24rem;
+  .lg\:hidden {
+    display: none;
   }
 }
