--- a/src/output.css
+++ b/src/output.css
@@ -1137,6 +1137,30 @@ video {
     margin-top: 2rem;
   }
 
+  .max-md\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .max-md\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .max-md\:mt-9 {
+    margin-top: 2.25rem;
+  }
+
+  .max-md\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .max-md\:mt-4 {
+    margin-top: 1rem;
+  }
+
+  .max-md\:mt-12 {
+    margin-top: 3rem;
+  }
+
   .max-md\:hidden {
     display: none;
   }
